package domain.game.effect;

public interface OutputProvider {

	void display(String message);
}
